--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,29 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // https://mvnrepository.com/artifact/androidx.recyclerview/recyclerview
+    runtimeOnly group: 'androidx.recyclerview', name: 'recyclerview', version: '1.2.0'
+    // https://mvnrepository.com/artifact/androidx.lifecycle/lifecycle-extensions
+    runtimeOnly group: 'androidx.lifecycle', name: 'lifecycle-extensions', version: '2.2.0'
+// https://mvnrepository.com/artifact/androidx.lifecycle/lifecycle-livedata
+    runtimeOnly group: 'androidx.lifecycle', name: 'lifecycle-livedata', version: '2.2.0'
+    // https://mvnrepository.com/artifact/com.google.android.material/material
+    runtimeOnly group: 'com.google.android.material', name: 'material', version: '1.5.0'
+// https://mvnrepository.com/artifact/androidx.swiperefreshlayout/swiperefreshlayout
+    runtimeOnly group: 'androidx.swiperefreshlayout', name: 'swiperefreshlayout', version: '1.1.0'
+// https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
+    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-core
+    implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.6.1', ext: 'pom'
+// https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-android
+    runtimeOnly group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-android', version: '1.6.1'
+
+
+
+
+
+
+
+
 }
